# dsa

Algo_Toolbox/week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product.cpp
Algo_Toolbox/week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp
Algo_Toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
Algo_Toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
Algo_Toolbox/week2_algorithmic_warmup/4_least_common_multiple/: lcm.cpp
Algo_Toolbox/week2_algorithmic_warmup/5_fibonacci_number_again/: fibonacci_huge.cpp
Algo_Toolbox/week2_algorithmic_warmup/6_last_digit_of_the_sum_of_fibonacci_numbers/: fibonacci_sum_last_digit.cpp
Algo_Toolbox/week2_algorithmic_warmup/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: fibonacci_partial_sum.cpp
Algo_Toolbox/week2_algorithmic_warmup/8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: fibonacci_sum_squares.cpp
Algo_Toolbox/week3_greedy_algorithms/1_money_change/: change.cpp
Algo_Toolbox/week3_greedy_algorithms/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
Algo_Toolbox/week3_greedy_algorithms/3_car_fueling/: car_fueling.cpp
Algo_Toolbox/week3_greedy_algorithms/4_maximum_advertisement_revenue/: dot_product.cpp
Algo_Toolbox/week3_greedy_algorithms/5_collecting_signatures/: covering_segments.cpp
Algo_Toolbox/week3_greedy_algorithms/6_maximum_number_of_prizes/: different_summands.cpp
Algo_Toolbox/week3_greedy_algorithms/7_maximum_salary/: largest_number.cpp
cpp/: CMakeLists.txt
cpp/include/: dsa
cpp/include/dsa_bits/: week1.hpp  week2.hpp  week3.hpp
cpp/src/: test.cpp  week1.cpp  week2.cpp  week3.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test.cpp  week3.cpp
